if got missed out of X<>

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -84,7 +84,7 @@ parenthesize a statement if it is the last thing in an expression:
 
 ...which brings us to C<if>.
 
-=head2 if
+=head2 X<if|control flow>
 
 To conditionally run a block of code, use a C<if> followed by a condition.
 The condition, an expression, will be evaluated immediately after the
