fix typos in modules.pod

--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -46,14 +46,14 @@ C<need> loads a C<compunit> at compile time.
 
     need MyModule;
 
-Any packages in the namespace defined within will also be availble.
+Any packages in the namespace defined within will also be available.
 
     # MyModule.pm
     unit module MyModule;
 
     class MyModule::Class { ... }
 
-C<MyModule::Class> will be defined in when C<MyModule> is loaded.
+C<MyModule::Class> will be defined when C<MyModule> is loaded.
 
 =comment class Class { ... } won't get exported automatically on loading...not sure if bug or..
 
