--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -8,10 +8,10 @@
 
 =head2 What's the difference between Rakudo and Perl 6?
 
-Rakudo is an implementation of Perl 6. Its currently the most developed but
-there have been other implementations in the past and probably others in the
-future. Perl 6 is the definition of the language. Many times the two names
-will be used loosely and interchangeably.
+Rakudo is an implementation of Perl 6. Its currently the most developed, but
+there have been other implementations in the past and will probably be others
+in the future. Perl 6 is the definition of the language. Many times the two
+names will be used loosely and interchangeably.
 
 =head2 As a Perl 6 beginner what should I install?
 
