Clarify applicability of Inline::Perl5
The answer slightly implies *only* Catalyst and DBI can be used

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -72,8 +72,8 @@ Support for installing Perl 6 modules from the Perl 5 CPAN is on its way.
 
 =head2 Can I use Perl 5 modules from Perl 6?
 
-With L<Inline::Perl5|https://github.com/niner/Inline-Perl5/> which works well
-enough to run Perl 5 Catalyst and DBI.
+Yes, with L<Inline::Perl5|https://github.com/niner/Inline-Perl5/>, which works
+well with most Perl 5 modules. It can even run Perl 5 Catalyst and DBI.
 
 =head2 Can I use C and C++ from Perl 6?
 
