--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -107,7 +107,8 @@ Examples:
     say :$foo.perl # :foo("bar")
     say :$foo.gist # foo => bar
 
-There are also modules to do this in the ecosystem like L<Data::Dump|https://github.com/tony-o/perl6-data-dump/> which uses color.
+There are also modules in the ecosystem to do this, like
+L<Data::Dump|https://github.com/tony-o/perl6-data-dump/>, which uses color.
 
 =head2 How can I get command line history in the perl 6 prompt (REPL)?
 
