--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -342,7 +342,7 @@ uses the C<gist> method instead. The former is meant for computers,
 the latter for human interpretation.
 
 Or phrased differently, C<$obj.Str> gives a string representation,
->$obj.gist> a short summary of that object suitable for fast recognition
+C<$obj.gist> a short summary of that object suitable for fast recognition
 by the programmer, and C<$obj.perl> gives a Perlish representation.
 
 For example type objects, also known as "undefined values", stringify
