--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -647,8 +647,29 @@ say $cookies; # -> 6
 
 =head2 The C<let> Prefix
 
-Like the L<C<temp>|#The_temp_Listop> listop, but only restores the value if
-the block exits unsuccessfully.
+Like the L<C<temp>|#The_temp_Prefix> prefix, but only restores the
+value if the block exits unsuccessfully. A successful exit means the
+block returned a defined value or a list.
+
+    my $answer = 42;
+
+    {
+        let $answer = 84;
+        die if Bool.pick;
+        CATCH {
+            default { say "it's been reset :(" }
+        }
+        say "we made it 84 sticks!";
+    }
+
+    say $answer;
+
+In the above case, if the C<Bool.pick> returns true, the answer will
+stay as 84 because the block returns a defined value (C<say> returns
+true). Otherwise the C<die> statement will cause the block to exit
+unsuccessfully, resetting the answer to 42.
+
+=comment this is duplicated in operators.pod
 
 =head1 Type Constraints and Initialization
 
