fix let example and clean up first sentence

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -703,15 +703,14 @@ except that C<temp> does not reset the value).
 
     sub prefix:<let>(Mu $a is rw)
 
-Like the L<C<temp>|#prefix_tmp> prefix, but only restores the
-value if the block exits unsuccessfully. A successful exit means the
-block returned a defined value or a list.
+Restores the previous value if the block exits unsuccessfully. A
+successful exit means the block returned a defined value or a list.
 
     my $answer = 42;
 
     {
         let $answer = 84;
-        die if Bool.pick;
+        die if not Bool.pick;
         CATCH {
             default { say "it's been reset :(" }
         }
