--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -647,15 +647,14 @@ say $cookies; # -> 6
 
 =head2 The C<let> Prefix
 
-Like the L<C<temp>|#The_temp_Prefix> prefix, but only restores the
-value if the block exits unsuccessfully. A successful exit means the
-block returned a defined value or a list.
+Restores the previous value if the block exits unsuccessfully. A
+successful exit means the block returned a defined value or a list.
 
     my $answer = 42;
 
     {
         let $answer = 84;
-        die if Bool.pick;
+        die if not Bool.pick;
         CATCH {
             default { say "it's been reset :(" }
         }
