minor typos and tweaking

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -8,10 +8,10 @@
 
 =head2 What's the difference between Rakudo and Perl 6?
 
-Rakudo is an implementation of Perl 6. Its currently the most developed, but
-there have been other implementations in the past and will probably be others
-in the future. Perl 6 is the definition of the language. Many times the two
-names will be used loosely and interchangeably.
+Rakudo is an implementation of Perl 6. It's currently the most developed, but
+there have been other implementations in the past and should be others in the
+future. Perl 6 is the definition of the language. Many times the two names will
+be used loosely and interchangeably.
 
 =head2 As a Perl 6 beginner what should I install?
 
@@ -22,8 +22,8 @@ L<http://rakudo.org/downloads/star/|http://rakudo.org/downloads/star>.
 If you are a Windows 32 or 64 bit user then Rakudo Star binaries are also
 available at the rakudo site. You will need Windows Git to use panda. 
 
-There will probably be Linux and Mac binaries available shortly from vendors
-and third parties. Although vendor versions may be outdated. 
+There should be Linux and Mac binaries available shortly from vendors and third
+parties. Although vendor versions may be outdated. 
 
 =head2 As an intermediate to advanced user I want to track Rakudo development.
 
@@ -233,7 +233,7 @@ just on the value in it.
 See the documentation on L<containers|/language/containers> for more
 information.
 
-=head2 What's up with array references and automatic derferencing? Do I still need the C<@> sigil?
+=head2 What's up with array references and automatic dereferencing? Do I still need the C<@> sigil?
 
 In Perl 6, nearly everything is a reference, so talking about taking
 references doesn't make much sense. Unlike Perl 5, scalar variables
