Fix problems found by zengargoyle++

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -265,8 +265,6 @@ Examples:
 The optional named parameters C<:k>, C<:kv>, C<:p>, C<:v> provide the same
 functionality as on slices:
 
-=over 4
-
 =item k
 
 Only return the index values of the matching elements in order.
@@ -320,8 +318,6 @@ Examples:
 
 The optional named parameters C<:k>, C<:kv>, C<:p> provide the same
 functionality as on slices:
-
-=over 4
 
 =item k
 
@@ -661,8 +657,8 @@ as they're seen for the second time (or more).
 
 Examples:
 
-    say <a a b b b c c>.repeated                    # a b b b c
-    say <a b b c c b a>.repeated                    # a b c b a
+    say <a a b b b c c>.repeated                    # a b b c
+    say <a b b c c b a>.repeated                    # b c b a
     say <a A B b c b C>.repeated(:as(&lc))          # A b b C
 
     my @list = {a => 42}, {b => 13}, {a => 42};
