Add doc for Str:D.comb(Int:D)

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -219,9 +219,12 @@ Examples:
 
     multi sub    comb(Str:D   $matcher, Str:D $input, $limit = Inf)
     multi sub    comb(Regex:D $matcher, Str:D $input, $limit = Inf, Bool :$match)
+    multi sub    comb(Int:D $size, Str:D $input, $limit = Inf)
+
     multi method comb(Str:D $input:)
     multi method comb(Str:D $input: Str:D   $matcher, $limit = Inf)
     multi method comb(Str:D $input: Regex:D $matcher, $limit = Inf, Bool :$match)
+    multi method comb(Str:D $input: Int:D $size, $limit = Inf)
 
 Searches for C<$matcher> in C<$input> and returns a list of all matches
 (as C<Str> by default, or as L<Match> if C<$match> is True), limited to at most
@@ -236,6 +239,9 @@ Examples:
     comb(/\N/, "a;b;c").perl;        # ("a", ";", "b", ";", "c").list
     comb(/\w/, "a;b;c", 2).perl;     # ("a", "b").list
     comb(/\w\;\w/, "a;b;c", 2).perl; # ("a;b",).list
+
+If the matcher is an integer value, it is considered to be a matcher that
+is similar to / . ** matcher /, but which is about 30x faster.
 
 =head2 routine lines
 
