Document Str.contains

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -392,6 +392,16 @@ Returns True if the invocant is identical to or ends with C<$needle>.
     say "Hello, World".ends-with('Hello');      # False
     say "Hello, World".ends-with('ld');         # True
 
+=head2 method contains
+
+    multi method contains(Str:D: Str(Cool) $needle) returns True:D
+
+Returns True if the invocant contains the C<$needle> at any position within
+the string.
+
+    say "Hello, World".contains('hello');      # False
+    say "Hello, World".contains(',');          # True
+
 =head2 method subst
 
     multi method subst(Str:D: $matcher, $replacement, *%opts)
