Better description of .ord/.ords

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -611,7 +611,8 @@ L<succ>). It fails on underflow
     multi sub ord   (Str:D)  returns Int:D
     multi method ord(Str:D:) returns Int:D
 
-Returns the codepoint number of the first character of the string
+Returns the codepoint number of the base characters of the first grapheme
+in the string.
 
 Example:
 
@@ -622,7 +623,8 @@ Example:
 
     multi method ords(Str:D:) returns Positional
 
-Returns a list of codepoint numbers, one for each character in the string.
+Returns a list of codepoint numbers, one for the base character of each
+grapheme in the string.
 
 Example:
 
