Document the failure nature of undeclared dynvars

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -193,6 +193,25 @@ C<$*dynamic2> is still C<101>. This stems from the fact that we declared a
 new dynamic variable C<$*dynamic1> in the block and did not assign to the
 old variable as we did with C<$*dynamic2>.
 
+The dynamic variables differ from other variable types in that refering
+to an undeclared dynamic variable is not a compile time error but a
+runtime L<failure|/type/Failure>, so a dynamic variable variable can be
+used undeclared as long as it is checked for definedness or used in a
+boolean context before using it for anything else:
+
+	=begin code
+	sub foo() {
+   		$*FOO // 'foo';
+	}
+
+	say foo; # -> 'foo'
+
+	my $*FOO = 'bar';
+
+	say foo; # -> 'bar'
+	=end code
+
+
 =head2 The C<!> Twigil
 
 Attributes are variables that exist per instance of a class. They may be
