Mention | in regexes
one could write so much more about that, though (hint, hint)

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -380,6 +380,13 @@ non-whitespace characters, followed by zero or more spaces, followed by the
 equals sign C<=>, followed again by optional whitespace, followed by another
 string of non-whitespace characters.
 
+=head1 X<Longest Alternation|regex,|>
+
+In regexes branches separated by C<|>, the longest match wins, independent of
+the lexical ordering in the regexes.
+
+    say ('abc' ~~ / a | .b /).Str;
+
 =head1 Anchors
 
 The regex engine tries to find a match inside a string by searching from
