Document Str.chomp a bit better

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -19,10 +19,23 @@ Returns the string with C<$chars> characters removed from the end.
 
 =head2 routine chomp
 
+Defined as:
+
     multi sub    chomp(Str:D ) returns Str:D
     multi method chomp(Str:D:) returns Str:D
 
-Returns the string with a logical newline removed from the end.
+Usage:
+    chomp($string);
+    $string.chomp;
+
+Returns the string with a logical newline (any codepoint that has the
+C<NEWLINE> property) removed from the end.
+
+Examples:
+
+    say chomp("abc\n");       # abc
+    say "def\r\n".chomp;      # def  NOTE: \r\n is a single grapheme!
+    say "foo\r".chomp;        # foo
 
 =head2 routine lc
 
