http://irclog.perlgeek.de/perl6/2015-11-08#i_11502289

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -48,9 +48,7 @@ List assignment leaves the choice of what to do to the variable on the left.
 
 For example, L<Array> variables (C<@> sigil) empty themselves on list
 assignment and then put all the values from the right-hand side into
-themselves. Contrary to item assignment, it means that the type of the
-variable on the left always stays C<Array>, regardless of the type of the
-right-hand side.
+themselves.
 
 The type of assignment (item or list) is decided by the first context
 seen in the current expression or declarator:
