Find all the references to curly braces and make them consistent

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -359,7 +359,7 @@ I<Key/value-slicing>
     say join ',', %calories<pear plum>:kv;      # Perl 6 (prettier version)
 =end item
 
-Also note that the subscripting braces are now a normal postcircumfix
+Also note that the subscripting curly braces are now a normal postcircumfix
 operator rather than a special syntactic form, and thus L<checking for
 existence of keys|#exists> and L<removing keys|#delete> is done with
 adverbs.
@@ -411,7 +411,7 @@ In Perl 6, the curly braces are changed to parentheses.
         say keys %($hashref   );
         say      &($subref    );
 
-Note that in both Perl 5 and Perl 6, the surrounding braces or parens can
+Note that in both Perl 5 and Perl 6, the surrounding curly braces or parens can
 often be omitted, though the omission can reduce readability.
 
 In Perl 5, the arrow operator, C«->» , is used for single access to a
