--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -240,12 +240,12 @@ L<http://doc.perl6.org/language/quoting>.
 There is a quoting operator that allows absolute literal strings: C<Q> or
 C<｢…｣>, although the latter might be difficult to find on your keyboard,
 depending on your keyboard... Backslash escapes do I<not> apply in C<Q> quoted
-strings. E. g. C<Q{This is still a closing brace → \}> renders "This is still a
-closing brace → \".
+strings. E. g. C<Q{This is still a closing curly brace → \}> renders "This is still a
+closing curly brace → \".
 
 C<q> does what you expect, allowing backslash escapes. E. g. C<q{This is
-not a closing brace → \}, but this is → }> returning "This is
-not a closing brace → }, but this is →". As in Perl 5, you can
+not a closing curly brace → \}, but this is → }> returning "This is
+not a closing curly brace → }, but this is →". As in Perl 5, you can
 get this behavior with single quotes.
 
 C<qq> allows interpolation of variables. However, by default, only
