--- a/Language/control.pod
+++ b/Language/control.pod
@@ -74,7 +74,7 @@ In other words, it follows the same reification rules as everything else.
 
 Technically, C<do> is a loop which runs exactly one iteration.
 
-A C<do> may also be used on a bare statement (without brackets)
+A C<do> may also be used on a bare statement (without curly braces)
 but this is mainly just useful for avoiding the syntactical need to
 parenthesize a statement if it is the last thing in an expression:
 
