--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -556,7 +556,7 @@ instances and roles are meant for managing behavior and code reuse.
     say $clone-of-p.x;      # 1
     =end code
 
-Roles are immutable as soon as the compiler parses the closing bracket of
+Roles are immutable as soon as the compiler parses the closing curly brace of
 the role declaration.
 
 =head2 Z<>Role Application
