--- a/Language/quoting.pod
+++ b/Language/quoting.pod
@@ -25,7 +25,7 @@ possible.
 
 =for code :allow<B>
 Q<Make sure you B«<»matchB«>» opening and closing delimiters>
-Q{This is still a closing brace → B<\>}
+Q{This is still a closing curly brace → B<\>}
 
 These examples produce:
 
@@ -33,7 +33,7 @@ These examples produce:
     More plainly.
     Almost any non-word character can be a delimiter!
     Make sure you <match> opening and closing delimiters
-    This is still a closing brace → \
+    This is still a closing curly brace → \
 
 The other quote forms add to this basic functionality:
 
@@ -43,7 +43,7 @@ The other quote forms add to this basic functionality:
 B<'>Very plainB<'>
 B<q[>This backB<\s>lash staysB<]>
 B<q[>This backB<\\>slash staysB<]> # Identical output
-B<q{>This is not a closing brace → B<\}>, but this is → B<}>
+B<q{>This is not a closing culy brace → B<\}>, but this is → B<}>
 B<Q :q $>There are no backslashes here, only lots of B<\$>B<\$>B<\$>!B<$>
 B<'>(Just kidding. ThereB<\'>s no money in that string)B<'>
 B<'>No $interpolation {here}!B<'>
@@ -60,7 +60,7 @@ These examples produce:
     Very plain
     This back\slash stays
     This back\slash stays
-    This is not a closing brace → } but this is →
+    This is not a closing curly brace → } but this is →
     There are no backslashes here, only lots of $$$!
     (Just kidding. There's no money in that string)
     No $interpolation {here}!
