--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -85,7 +85,7 @@ collection to be sure whether the keys are strings or objects:
     my %h; %h{pi}  = 1; say %h.perl; #-> { "3.14159265358979" => 1 }
 
 While the invisible quotes around single names is built into C<=>>,
-string conversion is not built into the braces: it is a behavior
+string conversion is not built into the curly braces: it is a behavior
 of the default C<Hash>.  Not all types of hashes or collections
 do so:
 
