--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -62,7 +62,7 @@ A Perl 6 program is a list of statements, separated by semicolons C<;>.
 A semicolon after the final statement (or after the final statement inside a
 block) is optional, though it's good form to include it.
 
-A closing curling brace followed by a newline character implies a statement
+A closing curly brace followed by a newline character implies a statement
 separator, which is why you don't need to write a semicolon before the last
 line in the code
 
