Fix a few links

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -149,7 +149,7 @@ identifier.
 
 Names of constants, types and routines are identifiers, and they also appear
 in variable names (optionally proceeded by a sigil; see
-L</language/variables|variables> for more details.)
+L<variables|/language/variables> for more details.)
 
 =head1 Statements and Expressions
 
@@ -290,7 +290,7 @@ a real and an imaginary number:
     6.123e5i
 
 
-=head3 Pair literals
+=head3 L<Pair|/type/Pair> literals
 
 Pairs are made of a key and a value, and there are two basic forms for
 constructing them: C<< key => 'value' >> and C<:key('value')>.
@@ -322,7 +322,7 @@ Long forms with explicit values:
     :thing['some', 'values']    # same as  thing => ['some', 'values']
     :thing{a => 'b'}            # same as  thing => { a => 'b' }
 
-=head3 Array literals
+=head3 L<Array|/type/Array> literals
 
 A pair of square brackets can surround an expression to form an itemized
 L<Array|/type/Array> literal; typically there is a comma-delimited list
@@ -357,7 +357,7 @@ arrays themselves:
 
 =comment TODO
 
-=head1 Operators
+=head1 L<Operators|/language/operators>
 
 =comment TODO: link to language/operators
 
