--- a/Type/List.pod
+++ b/Type/List.pod
@@ -893,7 +893,7 @@ doesn't satisfy the length requirement:
     say ('a'..'h').rotor(3).join('|');              # a b c|d e f
     say ('a'..'h').rotor(3, :partial).join('|');    # a b c|d e f|g h
 
-If the element of C<@cycle> is a L</type/Pair|Pair> instead, the key of the
+If the element of C<@cycle> is a L<Pair|/type/Pair> instead, the key of the
 pair specifies the length of the return sublist, and the value the gap between
 sublists; negative gaps produce overlap:
 
