Add some further stubs for syntax sections

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -146,6 +146,7 @@ identifier.
     # not valid identifiers:
     with-nubmers1234-5
     42
+    is-prime?
 
 Names of constants, types and routines are identifiers, and they also appear
 in variable names (optionally proceeded by a sigil; see
@@ -341,21 +342,66 @@ arrays themselves:
     # does not flatten:
     say [[@a], [3, 4]].elems;   # 2
 
-=head3 Hash literals
+=head3 L<Hash|/type/Hash> literals
+
+A pair of curly braces can surround a list of pairs to form a
+L<Hash|/type/Hash> literal; typically there is a comma-delimited list
+of pairs inside:
+
+    say {a => 73, foo => "fish"}.keys.join(" ");   # a foo
+    #   ^^^^^^^^^^^^^^^^^^^^^^^^ Hash constructor
+
+Most often this is used with arrow pairs.
+
+=head3 L<Regex|/type/Regex> literals
 
 =comment TODO
 
-=head3 Regex literals
+A regex is declared with slashes like C</foo/>. Note that this C<//> syntax is shorthand for the full C<rx//> syntax.
 
-=comment TODO
+You can assign regexes to variables, just like with other literals.
+
+    my $pattern = /foo/;
+    say "Match!" if "asdfoosdf" ~~ $pattern; # Match!
 
 =head2 Declarations
 
 =comment TODO
 
-=head2 Subroutine calls
+=head3 Variable declaration
+
+    my $x;                      # simple lexical variable
+    my $x = 7;                  # initialize the variable
+    my Int $x = 7;              # declare the type
+    my Int $x:D = 7;            # specify that the value must be defined (not undef)
+    my Int $x where * > 3 = 7;  # restrict the value based on a function
+
+=head3 Subroutine declaration
+
+    sub foo { say "Hello!" }
+    sub say-hello($to-whom) { say "Hello $to-whom!" }
+
+You can also assign subroutines to variables.
+
+    my &f = sub { say "Hello!" } # Un-named sub
+    my &f = -> { say "Hello!" }  # Lambda style syntax. The & sigil indicates the variable holds a function
+    my $f = -> { say "Hello!" }  # Functions can also be put into scalars
+
+=head3 Class, Role, and Grammar declaration
+
+    class Foo { }
+
+    role Bar { }
+
+    grammar Baz { }
+
+=head2 L<Subroutine|/language/functions> calls
 
 =comment TODO
+
+    foo;   # Invoke the function foo with no arguments
+    foo(); # Invoke the function foo with no arguments
+    $f();  # Invoke $f, which contains a function
 
 =head1 L<Operators|/language/operators>
 
